Issue 33510: Config parameters

--- a/snprc_ehr/resources/views/animalSearch.html
+++ b/snprc_ehr/resources/views/animalSearch.html
@@ -39,7 +39,9 @@
                         'Id/age/AgeInYearsRounded': {duplicate: true, editorConfig: {hideTrigger: true, minValue: 0}},
                         'Id/MostRecentWeight/MostRecentWeight': {duplicate: true, editorConfig: {hideTrigger: true, minValue: 0}},
                         'Id/numRoommates/AnimalsInCage': {editorConfig: {hideTrigger: true, minValue: 0}},
-                        'Id/activeGroups/Cycle::animal_group': {lookups: true}
+                        'Id/activeGroups/Cycle::animal_group': {lookups: true, rawData: true},
+                        'Id/activeGroups/Colony::animal_group': {lookups: true, rawData: true},
+                        'Id/activeGroups/Pedigree::animal_group': {lookups: true, rawData: true}
                     }
                 }).render('animalSearch_'+webpart.wrapperDivId);
             },
