Spec #34009: updates to use new LABKEY.ext4.BootstrapTabPanel - to replace ext4 tab panel on ehr-serviceRequests, ehr-enterData, ehr-colonyOverview

--- a/snprc_ehr/resources/views/colonyOverview.html
+++ b/snprc_ehr/resources/views/colonyOverview.html
@@ -3,25 +3,23 @@
     Ext4.onReady(function(){
         var webpart = <%=webpartContext%>;
         Ext4.create('SNPRC_EHR.panel.ColonyOverviewPanel', {
-            getTabs: function(){
+            getItems: function(){
                 return [{
                     title: 'Population Composition',
-                    style: 'padding 5px;',
+                    itemId: 'population',
                     items: [{
                         xtype: 'snprc-ehr-populationpanel',
                         filterArray: this.filterArray,
                         rowField: SNPRC_EHR.panel.PopulationPanel.FIELDS.species,
                         colFields: [EHR.panel.PopulationPanel.FIELDS.ageclass, EHR.panel.PopulationPanel.FIELDS.gender]
-                    }],
-                    itemId: 'population'
+                    }]
                 },{
                     title: 'Baboon Colony',
-                    style: 'padding 5px;',
+                    itemId: 'baboon',
                     items: [{
                         xtype: 'snprc-colonyusagepanel',
                         filterArray: [LABKEY.Filter.create('species_code', 'PC', LABKEY.Filter.Types.EQUALS)]
-                    }],
-                    itemId: 'baboon'
+                    }]
                 }];
             }
         }).render(webpart.wrapperDivId);
