Issue 31733: Fix the animal history drop down z-order issue by converting EHR and LDK participant (animal) history panel to bootstrap panel using hybrid ext/bootstrap panel. Remove frame from page and put title in page title.  Update a handful of reports which were tied to ext4 implementation. Update automated tests for new bootstrap tab panel.

--- a/snprc_ehr/resources/views/animalHistory.html
+++ b/snprc_ehr/resources/views/animalHistory.html
@@ -9,6 +9,7 @@
         Ext4.create('EHR.panel.AnimalHistoryPanel', {
             defaultReport: ctx.DefaultAnimalHistoryReport,
             defaultTab: 'General',
+            showFilterOptionsTitle: true,
             filterTypes: [{
                 xtype: 'ldk-singlesubjectfiltertype',
                 inputValue: LDK.panel.SingleSubjectFilterType.filterName,
