--- a/snprc_ehr/resources/views/animalHistory.view.xml
+++ b/snprc_ehr/resources/views/animalHistory.view.xml
@@ -1,4 +1,4 @@
-<view xmlns="http://labkey.org/data/xml/view" title="Animal History">
+<view xmlns="http://labkey.org/data/xml/view" title="Animal History" frame="none">
     <dependencies>
         <dependency path="ehr.context" />
 
@@ -7,7 +7,6 @@
 
         <dependency path="ehr/panel/MultiAnimalFilterType.js"/>
         <dependency path="ehr/panel/LocationFilterType.js"/>
-        <!--<dependency path="onprc_ehr/panel/AssignmentFilterType.js"/>-->
 
         <dependency path="ehr/panel/AnimalHistoryPanel.js"/>
     </dependencies>
