--- a/snprc_ehr/resources/views/ehrAdmin.html
+++ b/snprc_ehr/resources/views/ehrAdmin.html
@@ -14,6 +14,7 @@ Ext4.onReady(function (){
                 {name: 'Manage EHR Study', url: '<%=contextPath%>/study<%=containerPath%>/manageStudy.view?'},
                 {name: 'Populate Initial Data', url: '<%=contextPath%>/SNPRC_EHR<%=containerPath%>/populateData.view?'},
                 {name: 'SND Settings', url: '<%=contextPath%>/SNPRC_EHR<%=containerPath%>/SNDSettings.view?'},
+                {name: 'Add EHR extensible columns', url: '<%=contextPath%>/SNPRC_EHR<%=containerPath%>/EhrColumns.view?'},
                 {name: 'Record Delete Settings', url: '<%=contextPath%>/ehr<%=containerPath%>/recordDeleteSettings.view?'},
                 {name: 'Run Custom SQL', url: '<%=contextPath%>/ldk<%=containerPath%>/runCustomSql.view?schemaName=study'},
                 {name: 'Set EHR Module Properties', url: '<%=contextPath%>/core<%=containerPath%>/modulePropertyAdmin.view?moduleName=EHR'},
