Spec 36321: Updated layouts and accordion widget
Updated page layout, moving accordion control lower and displaying details across top.  Add detail fields to timeline view.

--- a/snprc_scheduler/resources/views/app.html
+++ b/snprc_scheduler/resources/views/app.html
@@ -1,2 +1,2 @@
-<div id="app" class='App'>test</div>
+<div id="app" class='App'></div>
 <script src="/labkey/snprc_scheduler/app/app.js" type="application/javascript"></script>
