Spec 36321: Procedure scheduler timeline grid
React data grid with customized header (slanted col headers).  Load/add/delete/sort rows. Populate/reorder columns.  Populate and handle checkbox and text cells.  Procedure note action row and pop up dialog. Tooltips/no rows mask. Timeline details.  React redux bindings.

--- a/snprc_scheduler/src/client/styles/css/Accordion.style.css
+++ b/snprc_scheduler/src/client/styles/css/Accordion.style.css
@@ -3,7 +3,7 @@
 @import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css");
 
 .bs-accordion {
-    width: 510px;
+    /*width: 510px;*/
     margin-left: 17px;
 }
 
