Spec 36321: Timeline save/cancel
Save and cancel actions for timeline. Do not save empty rows.  Start updating font awesome to react-fontawesome

--- a/snprc_scheduler/src/client/styles/css/Default.style.css
+++ b/snprc_scheduler/src/client/styles/css/Default.style.css
@@ -96,8 +96,16 @@
     margin-left: 17px;
     margin-right: 15px;
     width: 100%;
+    font-weight: bold;
   }
 
   .scheduler-save-cancel {
     padding-right: 15px;
+  }
+
+  .timeline-saving-modal .modal-content {
+    background-color: transparent;
+    border: 0px !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
   }
