snprc - PopulateData bug fix

--- a/snprc_ehr/resources/views/populateData.html
+++ b/snprc_ehr/resources/views/populateData.html
@@ -614,6 +614,11 @@
 
             populateProcedures: function () {
                 // dummy function to pass test
+                this.pendingInserts++;
+                this.onSuccess({
+                    schemaName: 'ehr_lookups',
+                    queryName: 'procedures'
+                });
             },
 
             populateTreatmentFrequencies: function () {
