--- a/snprc_ehr/resources/views/dataAdmin.html
+++ b/snprc_ehr/resources/views/dataAdmin.html
@@ -9,13 +9,29 @@ Ext4.onReady(function (){
 
     var webpart = <%=webpartContext%>;
 
-    //TODO: make data driven
+    Ext4.get(webpart.wrapperDivId).update(
+            '<div style="max-width:920px">' +
+            '<table>' +
+            '<tr style="vertical-align:top">' +
+            '    <td style="width:300px">' +
+            '        <div id="menu1_'+webpart.wrapperDivId+'"></div>' +
+            '    </td>' +
+            '    <td style="width:300px;vertical-align:top">' +
+            '        <div id="menu2_'+webpart.wrapperDivId+'"></div>' +
+            '    </td>' +
+            '    <td style="width:300px">' +
+            '        <div id="menu3_'+webpart.wrapperDivId+'"></div>' +
+            '    </td>' +
+            '</tr>' +
+            '</table>'
+    );
+
     function onSuccess(data){
-        var menuCfg = {
-            renderTo: webpart.wrapperDivId,
+        var menuCfg1 = {
+            renderTo: "menu1_"+webpart.wrapperDivId,
             sections: new Array(),
             columns: 3,
-            colWidth: 400,
+            colWidth: 300,
             renderer: function(item){
                 var cfg = {
                     html: '<a href="<%=contextPath%>/ehr<%=containerPath%>/updateTable.view?schemaName='+item.schemaName+'&query.queryName='+item.queryName+'">'+item.title+'</a>',
@@ -26,7 +42,7 @@ Ext4.onReady(function (){
             }
         }
 
-        menuCfg.sections = [{
+        menuCfg1.sections = [{
             header: 'Housing',
             items: [
                 {queryName: 'areas', schemaName: 'ehr_lookups', title: 'Areas'},
@@ -60,7 +76,70 @@ Ext4.onReady(function (){
                 {queryName: 'Accession Code', schemaName: 'ehr_lookups', title: 'APath Accession Types'}
 
             ]
-        },{
+        }];
+
+
+        var menuCfg2 = {
+            renderTo: "menu2_"+webpart.wrapperDivId,
+            sections: new Array(),
+            columns: 3,
+            colWidth: 300,
+            renderer: function(item){
+                var cfg = {
+                    html: '<a href="<%=contextPath%>/ehr<%=containerPath%>/updateTable.view?schemaName='+item.schemaName+'&query.queryName='+item.queryName+'">'+item.title+'</a>',
+                    style: 'padding-left:5px;padding-bottom:8px'
+                };
+
+                return cfg;
+            }
+        }
+
+        menuCfg2.sections = [{
+            header: 'Drop-down Lists',
+            items: [
+                {queryName: 'activeInactive', schemaName: 'ehr_lookups', title: 'Active/Inactive Status'},
+                {queryName: 'alopecia_score', schemaName: 'ehr_lookups', title: 'Alopecia Score'},
+                {queryName: 'id_type', schemaName: 'ehr_lookups', title: 'Animal ID Types'},
+                {queryName: 'status_codes', schemaName: 'ehr_lookups', title: 'Animal Status Codes'},
+                {queryName: 'flag_categories', schemaName: 'ehr_lookups', title: 'Animal Attribute Categories (Flag Categories)'},
+                {queryName: 'flag_values', schemaName: 'ehr_lookups', title: 'Animal Attribute values (Flag types)'},
+                {queryName: 'source', schemaName: 'ehr_lookups', title: 'Animal Source Codes'},
+                {queryName: 'AcquisitionType', schemaName: 'ehr_lookups', title: 'Acquisition Codes'},
+                {queryName: 'blood_sample_type', schemaName: 'ehr_lookups', title: 'Blood Sample Types (Not currently used)'},
+                {queryName: 'valid_birth_code', schemaName: 'snprc_ehr', title: 'Birth Codes'},
+                {queryName: 'valid_bd_status', schemaName: 'snprc_ehr', title: 'Birth Date Status Codes'},
+                {queryName: 'valid_clinical_resolutions', schemaName: 'ehr_lookups', title: 'Clinical Resolution Types'},
+                {queryName: 'valid_death_code', schemaName: 'snprc_ehr', title: 'Death Codes'},
+                {queryName: 'DispositionType', schemaName: 'ehr_lookups', title: 'Disposition Codes'},
+                {queryName: 'encounter_types', schemaName: 'ehr_lookups', title: 'Encounter Types'},
+                {queryName: 'geographic_origins', schemaName: 'ehr_lookups', title: 'Geographic Origins (Not currently used)'},
+                {queryName: 'ValidInstitutions', schemaName: 'snprc_ehr', title: 'Institution List'},
+                {queryName: 'preg_term_code', schemaName: 'ehr_lookups', title: 'Pregnancy Termination Codes'},
+                {queryName: 'proc_type', schemaName: 'ehr_lookups', title: 'Procedure Types'},
+                {queryName: 'rearing_type', schemaName: 'ehr_lookups', title: 'Rearing Types'},
+                {queryName: 'project_type', schemaName: 'ehr_lookups', title: 'SND Project Types'},
+                {queryName: 'tb_site', schemaName: 'ehr_lookups', title: 'TB Sites'},
+                {queryName: 'usda_levels', schemaName: 'ehr_lookups', title: 'USDA Levels'},
+                {queryName: 'ValidVets', schemaName: 'snprc_ehr', title: 'Veterinarian List'}
+            ]
+        }];
+
+        var menuCfg3 = {
+            renderTo: "menu3_"+webpart.wrapperDivId,
+            sections: new Array(),
+            columns: 3,
+            colWidth: 300,
+            renderer: function(item){
+                var cfg = {
+                    html: '<a href="<%=contextPath%>/ehr<%=containerPath%>/updateTable.view?schemaName='+item.schemaName+'&query.queryName='+item.queryName+'">'+item.title+'</a>',
+                    style: 'padding-left:5px;padding-bottom:8px'
+                };
+
+                return cfg;
+            }
+        }
+
+        menuCfg3.sections = [{
             header: 'Other Lists',
             items: [
                 // {queryName: 'snomed', schemaName: 'ehr_lookups', title: 'SNOMED Codes'},
@@ -69,51 +148,24 @@ Ext4.onReady(function (){
                 // {queryName: 'snomed_qualifiers', schemaName: 'ehr_lookups', title: 'SNOMED Qualifiers'},
                 // {queryName: 'snomed_subsets', schemaName: 'ehr_lookups', title: 'SNOMED Subsets'},
                 // {queryName: 'snomed_subset_codes', schemaName: 'ehr_lookups', title: 'SNOMED Subset Codes'},
-                {queryName: 'weight_ranges', schemaName: 'ehr_lookups', title: 'Weight: Min/Max Allowable Per Species'},
+                {queryName: 'fee_schedule_type', schemaName: 'ehr_lookups', title: 'Fee Schedule Types'},
                 {queryName: 'assignment_status', schemaName: 'ehr_lookups', title: 'IACUC Assignment Status'},
                 {queryName: 'notes_category', schemaName: 'ehr_lookups', title: 'Notes Categories'},
                 {queryName: 'problem_list_category', schemaName: 'ehr_lookups', title: 'Problem List Category (Not currently used)'},
-                {queryName: 'fee_schedule_type', schemaName: 'ehr_lookups', title: 'Fee Schedule Types'}
-                {queryName: 'validAccounts', schemaName: 'snprc_ehr', title: 'Account List'},
-
-            ]
-        },{
-            header: 'Drop-down Lists',
-            items: [
-                {queryName: 'alopecia_score', schemaName: 'ehr_lookups', title: 'Alopecia Score'},
-                {queryName: 'status_codes', schemaName: 'ehr_lookups', title: 'Animal Status Codes'},
-                {queryName: 'flag_categories', schemaName: 'ehr_lookups', title: 'Animal Attribute Categories (Flag Categories)'},
-                {queryName: 'flag_values', schemaName: 'ehr_lookups', title: 'Animal Attribute values (Flag types)'},
-                {queryName: 'source', schemaName: 'ehr_lookups', title: 'Animal Source Codes'},
-                {queryName: 'AcquisitionType', schemaName: 'ehr_lookups', title: 'Acquisition Codes'},
-                {queryName: 'birth_type', schemaName: 'ehr_lookups', title: 'Birth Type Field'},
-                {queryName: 'encounter_types', schemaName: 'ehr_lookups', title: 'Encounter Types'},
-                {queryName: 'species', schemaName: 'snprc_ehr', title: 'Species'},
+                {queryName: 'species', schemaName: 'snprc_ehr', title: 'Two-Character Species codes'},
                 {queryName: 'species_codes', schemaName: 'ehr_lookups', title: 'Species Codes'},
-                {queryName: 'valid_bd_status', schemaName: 'snprc_ehr', title: 'Birth Date Status Codes'},
-                {queryName: 'valid_birth_code', schemaName: 'snprc_ehr', title: 'Birth Codes'},
-                {queryName: 'valid_death_code', schemaName: 'snprc_ehr', title: 'Death Codes'},
-                {queryName: 'DispositionType', schemaName: 'ehr_lookups', title: 'Disposition Codes'},
+                {queryName: 'validAccounts', schemaName: 'snprc_ehr', title: 'Account List'},
                 {queryName: 'ValidChargeBySpecies', schemaName: 'snprc_ehr', title: 'Species Based ChargeIds'},
-                {queryName: 'ValidInstitutions', schemaName: 'snprc_ehr', title: 'Institution List'},
-                {queryName: 'ValidVets', schemaName: 'snprc_ehr', title: 'Veterinarian List'},
-                {queryName: 'valid_clinical_resolutions', schemaName: 'ehr_lookups', title: 'Clinical Resolution Types'},
-                {queryName: 'tb_site', schemaName: 'ehr_lookups', title: 'TB Sites'},
-                {queryName: 'blood_sample_type', schemaName: 'ehr_lookups', title: 'Blood Sample Types (Not currently used)'},
-                {queryName: 'encounter_types', schemaName: 'ehr_lookups', title: 'Encounter Types'},
-                {queryName: 'activeInactive', schemaName: 'ehr_lookups', title: 'Active/Inactive Status'},
-                {queryName: 'project_type', schemaName: 'ehr_lookups', title: 'SND Project Types'},
-                {queryName: 'id_type', schemaName: 'ehr_lookups', title: 'Animal ID Types'},
-                {queryName: 'preg_term_code', schemaName: 'ehr_lookups', title: 'Pregnancy Termination Codes'},
-                {queryName: 'proc_type', schemaName: 'ehr_lookups', title: 'Procedure Types'},
-                {queryName: 'usda_levels', schemaName: 'ehr_lookups', title: 'USDA Levels'},
-                {queryName: 'rearing_type', schemaName: 'ehr_lookups', title: 'Rearing Types'},
-                {queryName: 'geographic_origins', schemaName: 'ehr_lookups', title: 'Geographic Origins (Not currently used)'}
+                {queryName: 'weight_ranges', schemaName: 'ehr_lookups', title: 'Weight: Min/Max Allowable Per Species'}
+
             ]
         }];
+
         var section;
 
-        Ext4.create('LDK.panel.NavPanel', menuCfg);
+        Ext4.create('LDK.panel.NavPanel', menuCfg1);
+        Ext4.create('LDK.panel.NavPanel', menuCfg2);
+        Ext4.create('LDK.panel.NavPanel', menuCfg3);
     }
 });
 
