snprc - more updates for lookup table editing

--- a/snprc_ehr/resources/views/dataAdmin.html
+++ b/snprc_ehr/resources/views/dataAdmin.html
@@ -150,6 +150,7 @@ Ext4.onReady(function (){
                 {queryName: 'problem_list_category', schemaName: 'ehr_lookups', title: 'Problem List Category (Not used)'},
                 {queryName: 'species', schemaName: 'snprc_ehr', title: 'Species codes (Three-character)'},
                 {queryName: 'species_codes', schemaName: 'ehr_lookups', title: 'Species Codes (Two-character)'},
+                {queryName: 'speciesCommonNames', schemaName: 'ehr_lookups', title: 'Species Common Names (Two-character)'},
                 {queryName: 'ValidChargeBySpecies', schemaName: 'snprc_ehr', title: 'Species Based ChargeIds'},
                 {queryName: 'weight_ranges', schemaName: 'ehr_lookups', title: 'Weight: Min/Max Allowable Per Species'}
 
