snprc - Additional editing updates

--- a/snprc_ehr/resources/views/dataAdmin.html
+++ b/snprc_ehr/resources/views/dataAdmin.html
@@ -144,6 +144,7 @@ Ext4.onReady(function (){
                 // {queryName: 'snomed_subset_codes', schemaName: 'ehr_lookups', title: 'SNOMED Subset Codes'},
                 {queryName: 'validAccounts', schemaName: 'snprc_ehr', title: 'Account List'},
                 {queryName: 'AccountGroups', schemaName: 'ehr_lookups', title: 'Account Groups'},
+                {queryName: 'chargeBySpeciesTypes', schemaName: 'ehr_lookups', title: 'Charge by Species Types'},
                 {queryName: 'fee_schedule_type', schemaName: 'ehr_lookups', title: 'Fee Schedule Types'},
                 {queryName: 'assignment_status', schemaName: 'ehr_lookups', title: 'IACUC Assignment Status'},
                 {queryName: 'notes_category', schemaName: 'ehr_lookups', title: 'Notes Categories'},
