--- a/snprc_ehr/resources/views/populateData.html
+++ b/snprc_ehr/resources/views/populateData.html
@@ -719,6 +719,48 @@
                 schemaName: 'ehr_lookups',
                 queryName: 'weight_ranges',
                 pk: 'rowid'
+            }, {
+                label: 'Obscan Amniotic Fluid Condition',
+                populateFn: 'populateFromFile',
+                schemaName: 'ehr_lookups',
+                queryName: 'obscan_cond_amntc_fl',
+                pk: 'value'
+            }, {
+                label: 'Obscan Placenta comments',
+                populateFn: 'populateFromFile',
+                schemaName: 'ehr_lookups',
+                queryName: 'obscan_placenta_comment',
+                pk: 'value'
+            }, {
+                label: 'Obscan Placenta Grade',
+                populateFn: 'populateFromFile',
+                schemaName: 'ehr_lookups',
+                queryName: 'obscan_placenta_grade',
+                pk: 'value'
+            }, {
+                label: 'Obscan Placenta Location AP',
+                populateFn: 'populateFromFile',
+                schemaName: 'ehr_lookups',
+                queryName: 'obscan_placenta_loc_ap',
+                pk: 'value'
+            }, {
+                label: 'Obscan Placenta Location FC ',
+                populateFn: 'populateFromFile',
+                schemaName: 'ehr_lookups',
+                queryName: 'obscan_placenta_loc_fc',
+                pk: 'value'
+            }, {
+                label: 'Obscan Placenta Location LR ',
+                populateFn: 'populateFromFile',
+                schemaName: 'ehr_lookups',
+                queryName: 'obscan_placenta_loc_lr',
+                pk: 'value'
+            }, {
+                label: 'Obscan Reason',
+                populateFn: 'populateFromFile',
+                schemaName: 'ehr_lookups',
+                queryName: 'obscan_reason',
+                pk: 'value'
             }
         ];
 
